--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             </div>
             <div class="col image-col">
                 <div class="image-gallery">
-                    <img src="/img/mahabali/mapo-2.jpg" alt="">
-                    <img src="/img/mahabali/mapo-8.jpg" alt="">
+                    <img src="./img/mahabali/mapo-2.jpg" alt="">
+                    <img src="./img/mahabali/mapo-8.jpg" alt="">
                 </div>
             </div>
         </div>
