--- a/maha-info/info1.html
+++ b/maha-info/info1.html
@@ -24,10 +24,10 @@
     <nav class="navbar expand ig">
         <h1 class="logo">MAHABALIPURAM</h1>
         <ul class="nav-links" id="item">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/weather.html">Weather</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/photos.html">Photos</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./weather.html">Weather</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./photos.html">Photos</a></li>
             <li class="ctn"><a href="/booking.html">Book Guide</a></li>
         </ul>
         <img src="./img/menu-btn.jpg" alt="" class="menu-btn">
@@ -35,7 +35,7 @@
 
      <section class="bio1">
         <div class="main">
-            <img src="/maha-info/photo/info1.jpg">
+            <img src="./maha-info/photo/info1.jpg">
             <div class="bio1-text">
                 <h1>Five Rathas</h1>
                 <div class="line"></div>
@@ -52,7 +52,7 @@
         </div>
         
         <div class="ctn">
-            <a href="/maha-info/info2.html">Next</a>
+            <a href="./maha-info/info2.html">Next</a>
         </div>
 
     </section>
