--- a/maha-info/info5.html
+++ b/maha-info/info5.html
@@ -8,7 +8,7 @@
     <title>Mini Project</title>
     <link rel="" href="#" />
     <!--====css====-->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     
     <!--Fontawesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,11 +23,11 @@
     <nav class="navbar expand ig">
         <h1 class="logo">MAHABALIPURAM</h1>
         <ul class="nav-links" id="item">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/weather.html">Weather</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/photos.html">Photos</a></li>
-            <li class="ctn"><a href="/booking.html">Book Guide</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./weather.html">Weather</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./photos.html">Photos</a></li>
+            <li class="ctn"><a href="./booking.html">Book Guide</a></li>
         </ul>
         <img src="./img/menu-btn.jpg" alt="" class="menu-btn">
      </nav>
@@ -48,10 +48,10 @@
         </div>
 
         <div class="ctn">
-            <a href="/maha-info/info4.html">Back</a>
+            <a href="./maha-info/info4.html">Back</a>
         </div>
         <div class="ctn">
-            <a href="/maha-info/info6.html">Next</a>
+            <a href="./maha-info/info6.html">Next</a>
         </div>
     </section>
 
