--- a/maha-info/info7.html
+++ b/maha-info/info7.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+.<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,18 +23,18 @@
     <nav class="navbar expand ig">
         <h1 class="logo">MAHABALIPURAM</h1>
         <ul class="nav-links" id="item">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/weather.html">Weather</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/photos.html">Photos</a></li>
-            <li class="ctn"><a href="/booking.html">Book Guide</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./weather.html">Weather</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./photos.html">Photos</a></li>
+            <li class="ctn"><a href="./booking.html">Book Guide</a></li>
         </ul>
         <img src="./img/menu-btn.jpg" alt="" class="menu-btn">
      </nav>
 
      <section class="bio7">
         <div class="main">
-            <img src="/maha-info/photo/info7.jpg">
+            <img src="./maha-info/photo/info7.jpg">
             <div class="bio7-text">
                 <h1>Krishna Cave Temple</h1>
                 <div class="line"></div>
@@ -48,10 +48,10 @@
         </div>
 
         <div class="ctn">
-            <a href="/maha-info/info6.html">Back</a>
+            <a href="./maha-info/info6.html">Back</a>
         </div>
         <div class="ctn">
-            <a href="/maha-info/info8.html">Next</a>
+            <a href="./maha-info/info8.html">Next</a>
         </div>
     </section>
 
