--- a/maha-info/info1.html
+++ b/maha-info/info1.html
@@ -8,7 +8,7 @@
     <title>Mini Project</title>
     <link rel="" href="#" />
     <!--====css====-->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     
     <!--Fontawesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
