--- a/maha-info/info1.html
+++ b/maha-info/info1.html
@@ -28,7 +28,7 @@
             <li><a href="./weather.html">Weather</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="./photos.html">Photos</a></li>
-            <li class="ctn"><a href="/booking.html">Book Guide</a></li>
+            <li class="ctn"><a href="./booking.html">Book Guide</a></li>
         </ul>
         <img src="./img/menu-btn.jpg" alt="" class="menu-btn">
      </nav>
