--- a/maha-info/info4.html
+++ b/maha-info/info4.html
@@ -33,7 +33,7 @@
 
      <section class="bio4">
         <div class="main">
-            <img src="/maha-info/photo/info4.jpg">
+            <img src="./maha-info/photo/info4.jpg">
             <div class="bio4-text">
                 <h1>Alamparai Fort</h1>
                 <div class="line"></div>
