--- a/maha-info/info5.html
+++ b/maha-info/info5.html
@@ -34,7 +34,7 @@
 
      <section class="bio5">
         <div class="main">
-            <img src="/maha-info/photo/info5.jpg">
+            <img src="./maha-info/photo/info5.jpg">
             <div class="bio5-text">
                 <h1>Crocodile Bank</h1>
                 <div class="line"></div>
